[gd_scene load_steps=3 format=3 uid="uid://dyaajs1lvmg6g"]

[ext_resource type="Script" uid="uid://deqw4j34xv7tb" path="res://main/ui/ingameUI/upgradeUI/upgrade_card.gd" id="1_5uuf2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dded0"]
bg_color = Color(0.1764706, 0.1764706, 0.1764706, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[node name="UpgradeCard" type="PanelContainer"]
process_mode = 3
custom_minimum_size = Vector2(300, 200)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dded0")
script = ExtResource("1_5uuf2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
autowrap_mode = 3

[node name="RarityLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="."]
process_mode = 3
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
